@@ -10,10 +10,6 @@ Enhancements for PPL 0.11
   current interface based on `abandon_expensive_computations'.
 - Get rid of ugly assign functions defined in anonymous namespace of
   MIP_Problem.cc replacing it with a more general-purpose approach.
-- When the PPL has been configured with
-  CPPFLAGS="-DPPL_ARM_CAN_CONTROL_FPU=1" make sure the library initialization
-  procedure checks that the FPU can indeed be controlled, failing if
-  that is not the case.
 - Reconsider the datatype for the units parameter in the Watchdog
   constructors: should we prefer an unsigned?
 - Rename set_rational_sqrt_precision_parameter to
